--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./Assets/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+      href="./Assets/favicon.ico">
+    <link rel="stylesheet" href="./css/styles.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous">
   </head>
   <body>
     <header>
@@ -26,12 +24,9 @@
           href="./index.html"
           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto"
         >
-          <img
+          <img class="logo"
             src="./Assets/logo.png"
-            alt="logo"
-            width="150px"
-            height="50px"
-          />
+            alt="logo">
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
@@ -60,18 +55,38 @@
       <div class="barra">
         <div class="arrow">
           <a href="./past.html"
-            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"
-          /></a>
+            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"></a>
         </div>
         <h1>Contact Us</h1>
         <div class="arrow">
           <a href="./stats.html"
-            ><img class="flechas" src="./Assets/images.png" alt="adelante"
-          /></a>
+            ><img class="flechas" src="./Assets/images.png" alt="adelante"></a>
         </div>
       </div>
     </header>
-
+    <main>
+      <div class="form-contact">
+          <form class="form" action="#" method="get">
+              <fieldset class="f-contacto">
+                  <fieldset class="etiqueta">
+                      <label for="nombre">Name: </label>
+                  </fieldset>
+                      <input class="texto" type="text" name="nombre" id="nombre">
+                  <fieldset class="etiqueta">
+                      <label for="email">Email: </label>
+                  </fieldset>
+                      <input class="texto" type="email" name="email" id="email">
+                  <fieldset class="etiqueta">
+                      <label for="message"> Message: </label>
+                      </fieldset>
+                      <textarea name="name" id="name" cols="24" rows="10"></textarea>
+              </fieldset>
+              <fieldset class="boton">
+                  <input class="boton" type="submit" value="Submit">
+              </fieldset>
+          </form>
+      </div>
+  </main>
 
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
@@ -90,11 +105,6 @@
           <h4>Cohort</h4>
         </div>
       </footer>
-    
-  
-
-
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
