--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./Assets/favicon-32x32.png"
-    />
+      href="./Assets/favicon.ico">
     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
@@ -26,12 +25,9 @@
           href="./index.html"
           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto"
         >
-          <img
+          <img class="logo"
             src="./Assets/logo.png"
-            alt="logo"
-            width="150px"
-            height="50px"
-          />
+            alt="logo">
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
@@ -39,18 +35,15 @@
           </li>
           <li class="nav-item">
             <a href="./upcoming.html" class="btn btn-outline-secondary"
-              >Upcoming Events</a
-            >
+              >Upcoming Events</a>
           </li>
           <li class="nav-item">
             <a href="./past.html" class="btn btn-outline-secondary"
-              >Past Events</a
-            >
+              >Past Events</a>
           </li>
           <li class="nav-item">
             <a href="./contact.html" class="btn btn-outline-secondary"
-              >Contact Us</a
-            >
+              >Contact Us</a>
           </li>
           <li class="nav-item">
             <a href="./stats.html" class="btn btn-outline-secondary">Stats</a>
@@ -60,14 +53,12 @@
       <div class="barra">
         <div class="arrow">
           <a href="./stats.html"
-            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"
-          /></a>
+            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"></a>
         </div>
         <h1>Home</h1>
         <div class="arrow">
           <a href="./upcoming.html"
-            ><img class="flechas" src="./Assets/images.png" alt="adelante"
-          /></a>
+            ><img class="flechas" src="./Assets/images.png" alt="adelante"></a>
         </div>
       </div>
     </header>
@@ -144,7 +135,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
   </body>
 </html>
