--- a/past.html
+++ b/past.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Past Events</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./Assets/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+      href="./Assets/favicon.ico">
+    <link rel="stylesheet" href="./css/styles.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous">
   </head>
   <body>
     <header>
@@ -26,12 +24,9 @@
           href="./index.html"
           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto"
         >
-          <img
+          <img class="logo"
             src="./Assets/logo.png"
-            alt="logo"
-            width="150px"
-            height="50px"
-          />
+            alt="logo">
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
@@ -60,19 +55,48 @@
       <div class="barra">
         <div class="arrow">
           <a href="./upcoming.html"
-            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"
-          /></a>
+            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"></a>
         </div>
         <h1>Past Events</h1>
         <div class="arrow">
-          <a href="./contact.html"
-            ><img class="flechas" src="./Assets/images.png" alt="adelante"
-          /></a>
+          <a href="./contact.html"><img class="flechas" src="./Assets/images.png" alt="adelante"></a>
         </div>
       </div>
     </header>
-
-
+    <main class="events">
+    <div class="card" style="width: 18rem;">
+      <img class="imgEvents" src="./Assets/museum_tour.jpg" alt="museum">
+      <div class="card-body">
+        <h5 class="card-title">Museum Tour</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="./details.html" class="btn btn-secondary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img class="imgEvents" src="./Assets/music_concert.jpg" alt="concert">
+      <div class="card-body">
+        <h5 class="card-title">Music Concert</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="./details.html" class="btn btn-secondary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img class="imgEvents" src="./Assets/food_fair.jpg" alt="food_fair">
+      <div class="card-body">
+        <h5 class="card-title">Food Fair</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="./details.html" class="btn btn-secondary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img class="imgEvents" src="./Assets/marathon.jpg" alt="marathon">
+      <div class="card-body">
+        <h5 class="card-title">Marathon</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="./details.html" class="btn btn-secondary">Go somewhere</a>
+      </div>
+    </div>
+    </main>
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
           
@@ -90,12 +114,6 @@
           <h4>Cohort</h4>
         </div>
       </footer>
-    
-  
-
-
-
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
