--- a/stats.html
+++ b/stats.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stats</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./Assets/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+      href="./Assets/favicon.ico">
+    <link rel="stylesheet" href="./css/styles.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous">
   </head>
   <body>
     <header>
@@ -26,11 +24,9 @@
           href="./index.html"
           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto"
         >
-          <img
+          <img class="logo"
             src="./Assets/logo.png"
-            alt="logo"
-            width="150px"
-            height="50px">
+            alt="logo">
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
@@ -59,18 +55,88 @@
       <div class="barra">
         <div class="arrow">
           <a href="./contact.html"
-            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"
-          /></a>
+            ><img class="flechas" src="./Assets/imagesleft.png" alt="atras"></a>
         </div>
         <h1>Stats</h1>
         <div class="arrow">
           <a href="./index.html"
-            ><img class="flechas" src="./Assets/images.png" alt="adelante"
-          /></a>
+            ><img class="flechas" src="./Assets/images.png" alt="adelante"></a>
         </div>
       </div>
     </header>
-
+    <main>
+      <table>
+          <tr class="tabla">
+              <td class="titulo" colspan="3">Events Statistics</td>
+          </tr>
+          <tr class="tabla">
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="titulo" colspan="3">Upcoming events statistics by category</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="titulo" colspan="3">Past events statistics by category</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+          <tr>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+              <td class="tabla">1</td>
+          </tr>
+      </table>
+  </main>
 
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
