--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,7 @@
                       <input class="texto" type="email" name="email" id="email">
                   <fieldset class="etiqueta">
                       <label for="message"> Message: </label>
+                      <input class="texto" id="message">
                       </fieldset>
                       <textarea name="name" id="name" cols="24" rows="10"></textarea>
               </fieldset>
