--- a/details.html
+++ b/details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Details</title>
     <link
       rel="icon"
       type="image/png"
@@ -52,19 +52,10 @@
       </div>
     </header>
     <main class="eventos">
-        <div class="cards mb-3">
-            <img  src="./Assets/cinema.jpg" class="card-img-top" alt="cinema">
-            <div class="card-body">
-              <h3 class="card-title">Cinema</h3>
-              <p class="card-text"><b>NAME:</b> Cinema</p>
-              <p class="card-text"><b>DATE:</b> 14/01/1986</p>
-              <p class="card-text"><b>DESCRIPTION:</b> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit voluptatem ut nemo accusamus sed. Saepe laborum dolore co</p>
-              <p class="card-text"><b>CATEGORY:</b> Cinema</p>
-              <p class="card-text"><b>PLACE:</b> Resistencia, Chaco, Argentina</p>
-              <p class="card-text"><b>CAPACITY:</b> 100</p>
-              <p class="card-text"><b>PRICE:</b> $100</p>
-            </div>
-          </div>
+      <div class="detailCard">
+        <div id="detail" class="card mb-3">
+        </div>
+      </div>
     </main>
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
@@ -83,7 +74,8 @@
           <h4>Cohort</h4>
         </div>
       </footer>
-    
+      <script src="./Scripts/data.js"></script>
+      <script src="./Scripts/details.js"></script>
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
