--- a/index.html
+++ b/index.html
@@ -64,31 +64,35 @@
     </header>
     <main class="events">
       <div class="py-4 bg-section-2 d-flex justify-content-between align-items-center">
-        <div class="mx-4" id="category">
+        <div class="mx-4" id="categoryCheck">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
-                <label class="form-check-label" for="category1">Category</label>
+                <label class="form-check-label" for="category1">Music Concert</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category2" value="Museum">
-                <label class="form-check-label" for="category2">Category</label>
+                <label class="form-check-label" for="category2">Book Exchange</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category3" value="Costume Party">
-                <label class="form-check-label" for="category3">Category</label>
+                <label class="form-check-label" for="category3">Cinema</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category4" value="Music Concert">
-                <label class="form-check-label" for="category4">Category</label>
+                <label class="form-check-label" for="category4">Museum</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category5" value="Book Exchange">
-                <label class="form-check-label" for="category5">Category</label>
+                <label class="form-check-label" for="category5">Food Fair</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category6" value="Cinema">
-                <label class="form-check-label" for="category5">Category</label>
+                <label class="form-check-label" for="category6">Race</label>
             </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="category7" value="option7">
+              <label class="form-check-label" for="category7">Costume Party</label>
+          </div>
         </div>
         <div class="mx-">
             <form class="d-flex" role="search">
