--- a/past.html
+++ b/past.html
@@ -65,7 +65,7 @@
     </header>
     <main class="events">
       <div class="py-4 bg-section-2 d-flex justify-content-between align-items-center">
-        <!-- <div class="mx-4" id="categoryCheck">
+        <div class="mx-4" id="categoryCheck">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
                 <label class="form-check-label" for="category1">Music Concert</label>
@@ -94,7 +94,7 @@
               <input class="form-check-input" type="checkbox" id="category7" value="option7">
               <label class="form-check-label" for="category7">Costume Party</label>
           </div>
-        </div> -->
+        </div> 
         <div class="mx-">
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search">
@@ -103,7 +103,7 @@
     </div>
     <div class="cards">
       <div id="insertCards" class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
-        </div>
+      </div>
     </div>
     </main>
     <footer>
