--- a/upcoming.html
+++ b/upcoming.html
@@ -66,7 +66,7 @@
     </header>
     <main class="events">
       <div class="py-4 bg-section-2 d-flex justify-content-between align-items-center">
-        <!-- <div class="mx-4" id="categoryCheck">
+        <div class="mx-4" id="categoryCheck">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
                 <label class="form-check-label" for="category1">Music Concert</label>
@@ -95,7 +95,7 @@
               <input class="form-check-input" type="checkbox" id="category7" value="option7">
               <label class="form-check-label" for="category7">Costume Party</label>
           </div>
-        </div> -->
+        </div> 
         <div class="mx-">
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search">
