--- a/index.html
+++ b/index.html
@@ -67,31 +67,31 @@
         <div class="mx-4" id="categoryCheck">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
-                <label class="form-check-label" for="category1">Music Concert</label>
+                <label class="form-check-label" for="category1">Food Fair</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category2" value="Museum">
-                <label class="form-check-label" for="category2">Book Exchange</label>
+                <label class="form-check-label" for="category2">Museum</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category3" value="Costume Party">
-                <label class="form-check-label" for="category3">Cinema</label>
+                <label class="form-check-label" for="category3">Costume Party</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category4" value="Music Concert">
-                <label class="form-check-label" for="category4">Museum</label>
+                <label class="form-check-label" for="category4">Music Concert</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category5" value="Book Exchange">
-                <label class="form-check-label" for="category5">Food Fair</label>
+                <label class="form-check-label" for="category5">Book Exchange</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category6" value="Cinema">
-                <label class="form-check-label" for="category6">Race</label>
+                <label class="form-check-label" for="category6">Cinema</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="category7" value="option7">
-              <label class="form-check-label" for="category7">Costume Party</label>
+              <input class="form-check-input" type="checkbox" id="category7" value="Race">
+              <label class="form-check-label" for="category7">Race</label>
           </div>
         </div>
         <div class="mx-">
