--- a/index.html
+++ b/index.html
@@ -63,48 +63,20 @@
       </div>
     </header>
     <main class="events">
-      <div class="py-4 bg-section-2 d-flex justify-content-between align-items-center">
-        <div class="mx-4" id="categoryCheck">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
-                <label class="form-check-label" for="category1">Food Fair</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category2" value="Museum">
-                <label class="form-check-label" for="category2">Museum</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category3" value="Costume Party">
-                <label class="form-check-label" for="category3">Costume Party</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category4" value="Music Concert">
-                <label class="form-check-label" for="category4">Music Concert</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category5" value="Book Exchange">
-                <label class="form-check-label" for="category5">Book Exchange</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category6" value="Cinema">
-                <label class="form-check-label" for="category6">Cinema</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="category7" value="Race">
-              <label class="form-check-label" for="category7">Race</label>
-          </div>
-        </div>
-        <div class="mx-">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search">
-                
-            </form>
-        </div>
+      
+    <div id="checkbox-search"
+    class="container form-check  d-flex flex-column gap-4 align-items-center justify-content-center justify-content-lg">
+  
+    <div class="container d-flex flex-wrap gap-2 justify-content-center ps-4" id="chbox">
     </div>
-    <div class="cards">
-      <div id="insertCards" class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
-      </div>
-    </div>
+    <form action="">
+      <fieldset class="d-flex justify-content-end">
+          <input class="form-control me-2" type="search" placeholder="Search" id="search" aria-label="Search">
+      </fieldset>
+  </form>
+  </div>
+   <div class="container d-flex flex-wrap justify-content-center gap-3" id="cartas">
+  </div>
     </main>
 
     <footer>
@@ -124,8 +96,7 @@
         <h4>Cohort</h4>
       </div>
     </footer>
-    <script src="./Scripts/data.js"></script>
-    <script src="./Scripts/index.js"></script>
+    <script type="module" src="./Scripts/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
