--- a/details.html
+++ b/details.html
@@ -50,12 +50,10 @@
           </li>
         </ul>
       </div>
-    </header>
-    <main class="eventos">
-      <div class="detailCard">
-        <div id="detail" class="card mb-3">
+      <main class="view">
+        <div class="py-4 bg-section-2 view d-flex align-items-center" id="detailCard">
+            
         </div>
-      </div>
     </main>
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
