--- a/details.html
+++ b/details.html
@@ -50,9 +50,9 @@
           </li>
         </ul>
       </div>
-      <main class="view">
-        <div class="py-4 bg-section-2 view d-flex align-items-center" id="detailCard">
-        </div>
+    </header>
+    <main class="d-flex align-items-center justify-content-center py-3" >
+
     </main>
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
@@ -71,8 +71,7 @@
           <h4>Cohort</h4>
         </div>
       </footer>
-      <script src="./Scripts/data.js"></script>
-      <script src="./Scripts/details.js"></script>
+      <script src="./Scripts/details.js"></script> 
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
